# Weaver-AI

./: .gitignore  README.md  pyproject.toml
data/: arguments.txt  start_triples.json
src/: app_ui.py  client.py  prompts.py  utils.py
src/models/: character.py  choice.py  model_handler.py  stat.py  story.py  story_manager.py
