[tool.poetry]
name = "weaver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.46.3"
streamlit = "^1.40.1"
tiktoken = "^0.8.0"
blobfile = "^3.0.0"
sentencepiece = "^0.2.0"
torch = {version = "^2.5.1+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch_cpu"}
langchain = "^0.3.8"
pinecone-client = "^5.0.1"
python-dotenv = "^1.0.1"
notebook = "^7.2.2"
openai = "^1.55.0"
langchain-community = "^0.3.8"
langchain-openai = "^0.2.9"
groq = "^0.12.0"
gradio = "^5.6.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
